pxc/tests/test_081_operator/deref.px
namespace deref;
public import common -;

{
  string x = "abc";
  const cstrref s = x;
  println(*s);
  *s = 'x'; // error: not modifiable
  println(s);
}
